--- a/NEW KicksNation-Ecommerce-Website-master/CSS/style.css
+++ b/NEW KicksNation-Ecommerce-Website-master/CSS/style.css
@@ -7,7 +7,7 @@ body{
     font-family: 'Poppins', sans-serif;
 }
 .header{ /* main header background */
-    background: radial-gradient(#fff, #97f2f8);
+    background: radial-gradient(#ff7f00, #0066cc);
 }
 .header .row{
     margin-top: 75px;
@@ -18,12 +18,14 @@ body{
     padding-left: 25px;
     padding-right: 25px;
 }
-.toprectangle{ /*Free returns and standard shipping*/
-  background-image: linear-gradient(to right, rgb(0, 204, 255) , rgb(6, 184, 169));  
-  background-blend-mode: normal;
-  height: 50px;
-  display:auto;
-}
+.toprectangle {
+    /* Free returns and standard shipping */
+    background-image: linear-gradient(to left, rgb(255, 127, 0), rgb(0, 102, 204));
+    background-blend-mode: normal;
+    height: 50px;
+    display: block;  /* 'auto' is not valid for 'display' */
+    border: 2px solid orangered;
+  }
 .toprectangle p{
     color: #ffffff;
     font-family: 'Poppins', sans-serif;
@@ -190,7 +192,7 @@ p{
 
 }
 .shop-now-btn {
-    background-color: #007eec;
+    background-color: #fec62d;
     color: #fff;
     border: none;
     padding: 15px 30px;
@@ -199,7 +201,7 @@ p{
 }
 
 .shop-now-btn:hover {
-    background-color: #001aff;
+    background-color: #ff4400af;
 }
 .hero-dots {
     position: absolute;
@@ -288,7 +290,7 @@ p{
 .animate-zoom {animation:animatezoom 0.6s}@keyframes animatezoom{from{transform:scale(0)} to{transform:scale(1)}}
 
 .rowsports{
-    background: radial-gradient(#fff, #97f2f8);
+    background: radial-gradient(#ff7f00, #0066cc);
     display: flex;/*flexible content*/
     align-items: center;
     flex-wrap: wrap;/*wrap place single line or multi lines in given space.*/ 
@@ -603,7 +605,7 @@ ul{
 
 /*for featured categories are*/
 .offer{
-    background: radial-gradient(#fff, #008cffa4);
+    background: radial-gradient(#ff7f00, #0066cc);
     margin-top: 80px;
     padding: 30px;
 }
@@ -829,8 +831,10 @@ th:last-child{
 
 
 .account-page {
+    border-top: orangered 2px solid;
     padding: 50px 0;
-    background: radial-gradient(#fff, #06c5ff);
+    background: radial-gradient(#ff7f00, #0066cc);
+
 }
 .col-2{
     flex-basis: 50%;/*divide it into haif*/
